--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>ABC's</title>
-  <!-- <link rel="stylesheet" href="./css/prototype.css" /> -->
+  <!-- <link rel="stylesheet" href="./css/css" /> -->
 </head>
 
 <body>
   <div id="app"></div>
-  <!-- <script src="./js/index.js"></script> -->
+  <script src="./js/index.js"></script>
 </body>
 
 </html>
