--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Ultimate NFL Database</title>
-  <!-- <link rel="stylesheet" href="./css/css" /> -->
+  <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
